--- a/home.html
+++ b/home.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" date-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Home page
+    <title>Payoo | Home</title>
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+
+    <!-- tailwind + daisy -->
+     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+     <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+    <!-- icon cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        *{
+              font-family: "Outfit", sans-serif;
+        }
+    </style>
+    </head>
+<body class="min-h-screen max-w-md bg-base-200 mx-auto">
+
+    
+ <header class="border-b-1 border-gray-300">
+    <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
+        <div class="left flex gap-1">
+          <div class="logo w-[60px]">
+            <img src="assets/logo.png" alt="Logo">
+          </div>
+           <div class="balance-info">
+            <h2 class="text-2xl font-bold">$<span class="balance">45000</span></h2>
+           <p class="text-neutral/50">Available Balance</p>
+           </div> 
+        </div>
+        <div class="right">
+          <a href="/index.html" class="btn btn-soft text-neutral/50 font-normal"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>  
+        </div>
+
+    </section>
+
+ </header>
+
+ <section class="w-11/12 mx-auto space-y-5">
+    <h2 class="text-3xl font-bold pt-6">Welcome to pay<span class="text-primary">oo</span></h2>
+     <p class="text-neutral/50 leading-7">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
+
+     <div class="buttons grid grid-cols-3 gap-3">
+      
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-1.png" alt="Image">
+            <p class="text-gray-500 font-normal">Add Money</p>
+        </button>
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-2.png" alt="Image">
+            <p class="text-gray-500 font-normal">Cashout</p>
+        </button>
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-3.png" alt="Image">
+            <p class="text-gray-500 font-normal">Transfer Money</p>
+        </button>
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-4.png" alt="Image">
+            <p class="text-gray-500 font-normal">Get Bonus</p>
+        </button>
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-5.png" alt="Image">
+            <p class="text-gray-500 font-normal">Pay Bill</p>
+        </button>
+        <button class="btn flex-col h-full py-4">
+            <img src="/assets/opt-6.png" alt="Image">
+            <p class="text-gray-500 font-normal">Transactions</p>
+        </button>
+     </div>
+
+ </section>
+
+ 
+
+ <!-- <script src="script/login.js"></script> -->
 </body>
 </html>
