--- a/home.html
+++ b/home.html
@@ -27,14 +27,14 @@
 <body class="min-h-screen max-w-md bg-base-200 mx-auto">
 
     
- <header class="border-b-1 border-gray-300">
+ <header class="border-b-1 border-gray-300 sticky top-0 bg-base-200">
     <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
         <div class="left flex gap-1">
           <div class="logo w-[60px]">
             <img src="assets/logo.png" alt="Logo">
           </div>
            <div class="balance-info">
-            <h2 class="text-2xl font-bold">$<span class="balance">45000</span></h2>
+            <h2 class="text-2xl font-bold">$<span id="balance">45000</span></h2>
            <p class="text-neutral/50">Available Balance</p>
            </div> 
         </div>
@@ -92,7 +92,7 @@
 
           <label class="label text-neutral font-bold">Pin Number</label>
           <input id="cashout-pin" maxlength="4" type="password" class="input rounded-full  bg-base-200 w-full" placeholder="Enter 4 digit pin number" />
-          <button id="login-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
+          <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
         </fieldset>
       </div>
     </div>
