--- a/home.html
+++ b/home.html
@@ -79,6 +79,33 @@
      </div>
 </section>
 
+<section id="add-money" class="w-11/12 mx-auto py-5">
+  <h2 class="text-xl font-bold mb-5">Add Money</h2>
+  <div class="card bg-base-100 w-full shadow rounded-2xl">
+      <div class="card-body">
+        <fieldset class="fieldset">
+            <label class="label text-neutral font-bold">Select A Bank</label>
+            <select id="add-money-bank" class="select">
+                <option disabled selected>Pick a color</option>
+                <option value="DBBL">DBBL</option>
+                <option value="IBBL">IBBL</option>
+                <option value="City Bank">City Bank</option>
+            </select>
+
+          <label class="label text-neutral font-bold">Agent Number</label>
+          <input id="cashout-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit number" />
+
+          <label class="label text-neutral font-bold">Amount</label>
+          <input id="cashout-amount" type="number" class="input rounded-full bg-base-200 w-full" placeholder="Enter amount to withdraw" />
+
+          <label class="label text-neutral font-bold">Pin Number</label>
+          <input id="cashout-pin" maxlength="4" type="password" class="input rounded-full  bg-base-200 w-full" placeholder="Enter 4 digit pin number" />
+          <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
+        </fieldset>
+      </div>
+    </div>
+</section>
+
 <section id="cashout" class="w-11/12 mx-auto py-5">
   <h2 class="text-xl font-bold mb-5">Cashout</h2>
   <div class="card bg-base-100 w-full shadow rounded-2xl">
