--- a/home.html
+++ b/home.html
@@ -84,23 +84,23 @@
   <div class="card bg-base-100 w-full shadow rounded-2xl">
       <div class="card-body">
         <fieldset class="fieldset">
-            <label class="label text-neutral font-bold">Select A Bank</label>
-            <select id="add-money-bank" class="select">
-                <option disabled selected>Pick a color</option>
+            <label class="label text-neutral font-bold ">Select A Bank</label>
+            <select id="add-money-bank" class="select rounded-full bg-base-200 w-full">
+                <option  selected>Select bank</option>
                 <option value="DBBL">DBBL</option>
                 <option value="IBBL">IBBL</option>
                 <option value="City Bank">City Bank</option>
             </select>
 
-          <label class="label text-neutral font-bold">Agent Number</label>
-          <input id="cashout-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit number" />
+          <label class="label text-neutral font-bold">Bank Account Number</label>
+          <input id="add-money-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 w-full" placeholder="Enter 11 digit account number" />
 
-          <label class="label text-neutral font-bold">Amount</label>
-          <input id="cashout-amount" type="number" class="input rounded-full bg-base-200 w-full" placeholder="Enter amount to withdraw" />
+          <label class="label text-neutral font-bold">Amount to Add</label>
+          <input id="add-money-amount" type="number" class="input rounded-full bg-base-200 w-full" placeholder="Add Amount to withdraw" />
 
           <label class="label text-neutral font-bold">Pin Number</label>
-          <input id="cashout-pin" maxlength="4" type="password" class="input rounded-full  bg-base-200 w-full" placeholder="Enter 4 digit pin number" />
-          <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
+          <input id="add-money-pin" maxlength="4" type="password" class="input rounded-full  bg-base-200 w-full" placeholder="Enter 4 digit pin number" />
+          <button id="add-money-btn" class="btn btn-primary mt-4 rounded-full">Add Money</button>
         </fieldset>
       </div>
     </div>
@@ -127,6 +127,8 @@
 
  
   <script src="script/mechine.js"></script>
+ <script src="script/addMoney.js"></script>
  <script src="script/cashout.js"></script>
+
 </body>
 </html>
