--- a/home.html
+++ b/home.html
@@ -52,11 +52,11 @@
 
      <div class="buttons grid grid-cols-3 gap-3">
       
-        <button class="btn flex-col h-full py-4">
+        <button onclick="showOnly('add-money')" class="btn flex-col h-full py-4">
             <img src="/assets/opt-1.png" alt="Image">
             <p class="text-gray-500 font-normal">Add Money</p>
         </button>
-        <button class="btn flex-col h-full py-4">
+        <button onclick="showOnly('cashout')" class="btn flex-col h-full py-4">
             <img src="/assets/opt-2.png" alt="Image">
             <p class="text-gray-500 font-normal">Cashout</p>
         </button>
@@ -79,7 +79,7 @@
      </div>
 </section>
 
-<section id="add-money" class="w-11/12 mx-auto py-5">
+<section id="add-money" class="w-11/12 mx-auto py-5 hidden">
   <h2 class="text-xl font-bold mb-5">Add Money</h2>
   <div class="card bg-base-100 w-full shadow rounded-2xl">
       <div class="card-body">
