--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             <img src="/assets/opt-5.png" alt="Image">
             <p class="text-gray-500 font-normal">Pay Bill</p>
         </button>
-        <button class="btn flex-col h-full py-4">
+        <button onclick="showOnly('history')" class="btn flex-col h-full py-4">
             <img src="/assets/opt-6.png" alt="Image">
             <p class="text-gray-500 font-normal">Transactions</p>
         </button>
@@ -123,6 +123,14 @@
         </fieldset>
       </div>
     </div>
+</section>
+
+<section id="history" class="w-11/12 mx-auto py-5 hidden">
+<h2 class="text-xl font-bold mb-5">Transactions</h2> 
+<div class="space-y-5" id="history-container">
+
+</div>
+
 </section>
 
  
